# ME759-F17-FinalProject

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: cpu_task.cpp  main.cpp  mpi_task.cpp  mpi_task.cu
include/: MpiContext.hpp  Packets.hpp  Task.hpp  TaskManager.hpp  TaskMaster.hpp  Topic.hpp  util.hpp
src/: Task.cpp  TaskManager.cpp  TaskMaster.cpp  Topic.cpp  commands.proto
tex/: report.tex
